🛠 fix: Header spacing

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -129,14 +129,11 @@ main {
   display: grid;
   grid-template-columns: [left] 1fr [middle] 1fr [right];
   grid-auto-flow: row;
-
+  
   > section {
+    margin-top: $section_spacing;
     grid-column: 1 / span 2;
     display: inline-block;
-
-    &:not(:first-of-type) {
-      margin-top: $section_spacing;
-    }
 
     hr {
       border: 1px solid $black;
